--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
    <!-- <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>-->
-    <span class="site-heading-lower">Welcome to KrazeHomemade</span>
+    <span class="site-heading-lower">KrazeHomemade
+    </span>
+    <img class="kh" src="KHlogo.png" alt="KrazeHomemade Logo">
   </h1>
 
   <!-- Navigation -->
